--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
-#body {
-  
+body {
+ background-color: lightblue;
   text-align: center;
   font-family: Arial;
   margin: 0;
   padding: 0;
-  background-color: #blue;
+  
 }
-#header {
+.header {
   
   padding: 10px;
   text-align: center;
 }
+
 #nav {
   
   padding: 8px;
